| Summary: | ASTERISK-25697: bridge_basic: don't play an attended transfer fail sound after target hangs up | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2016-01-14 15:20:06.000-0600 | Date Closed: | 2016-01-16 08:33:34.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Bridging/bridge_basic |
| Versions: | 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If the attended transfer destination answers (picks call up or goes to voicemail) if they hangup while still connected to the transferer the transferer hears the fail sound.
Duplicate: Alice calls Bob Bob initiates and attended transfer to Carol Carol answers and then hangs up. The fail sound is played back to Bob. | ||
| Comments: | |||