main/bridge_basic.c
@@ -2178,6 +2178,7 @@ static enum attended_transfer_state consulting_exit(struct attended_transfer_pro
 		bridge_unhold(props->transferee_bridge);
 		return TRANSFER_COMPLETE;
 	case STIMULUS_TRANSFER_TARGET_HANGUP:
+		return TRANSFER_REBRIDGE;
 	case STIMULUS_DTMF_ATXFER_ABORT:
 		play_sound(props->transferer, props->failsound);
 		return TRANSFER_REBRIDGE;
